fix tooltips being clipped. might cause something else..

--- a/public/styles/DeepLib.css
+++ b/public/styles/DeepLib.css
@@ -35,7 +35,7 @@
   flex-direction: column;
   padding: min(1.0dvh, 0.5dvw);
   gap: 0.3em;
-  overflow-y: auto;
+  overflow-y: visible;
 }
 
 .deeplib-misc {
